feat: 키워드 검색 기능 추가